04-Ingress/phpadmin-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^(/phpapache)$ $1/ permanent;
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  name: kubernetes-phpapache-ingress
spec:
  rules:
  - host: kubemaster
    http:
      paths:
      - path: /phpapache/?(.*)
        backend:
          serviceName: phpapache-service
          servicePort: 8080
